--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   http: ^0.13.5
   webview_flutter: ^4.0.1
   markdown_editable_textinput: ^2.2.0
+  flutter_form_builder: ^7.7.0
   
 
 
