--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,20 @@ amplifytools.xcconfig
 **.sample
 #amplify-do-not-edit-end
 pubspec.lock
+
+# Local .terraform directories
+**/.terraform/*
+*.tfstate
+*.tfstate.*
+crash.log
+crash.*.log
+*.tfvars
+*.tfvars.json
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+.terraformrc
+terraform.rc
+terraform/.terraform.lock.hcl
+terraform/contentpub-central/.terraform.lock.hcl
