--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -1,13 +1,13 @@
 {
-  "providers": [
-    "awscloudformation"
-  ],
-  "projectName": "ContentPubIO",
+  "projectName": "javathlon",
   "version": "3.1",
   "frontend": "flutter",
   "flutter": {
     "config": {
       "ResDir": "./lib/"
     }
-  }
+  },
+  "providers": [
+    "awscloudformation"
+  ]
 }
