--- a/.gitignore
+++ b/.gitignore
@@ -75,8 +75,7 @@ dist/
 node_modules/
 aws-exports.js
 awsconfiguration.json
-amplifyconfiguration.json
-amplifyconfiguration.dart
+amplify.env
 amplify-build-config.json
 amplify-gradle-config.json
 amplifytools.xcconfig
