--- a/.gitignore
+++ b/.gitignore
@@ -75,7 +75,8 @@ dist/
 node_modules/
 aws-exports.js
 awsconfiguration.json
-amplify.env
+amplifyconfiguration.json
+amplifyconfiguration.dart
 amplify-build-config.json
 amplify-gradle-config.json
 amplifytools.xcconfig
