--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,10 @@ dependencies:
   path_provider: ^2.0.11
   cached_network_image: ^3.2.3
   amplify_datastore: ^1.0.0-next.3
+  dio: ^5.0.1
+  xml: ^6.2.2
+  chunked_stream: ^1.4.1
+  async: ^2.10.0
 
 dev_dependencies:
   flutter_test:
