--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,10 +38,10 @@ dependencies:
   amplify_authenticator: ^1.0.0-next.1
   chewie: 1.3.6
   video_player: ^2.4.10
-  logger: ^1.1.0
+  logger: ^1.2.2
   http: ^0.13.5
   webview_flutter: ^4.0.1
-  markdown_editable_textinput: ^2.2.0
+  simple_markdown_editor: ^0.1.6
   flutter_form_builder: ^7.7.0
   flutter_multi_select_items: ^0.4.2
   
@@ -53,7 +53,7 @@ dependencies:
   amazon_cognito_identity_dart_2: ^3.1.1
   cupertino_icons: ^1.0.2
   flutter_animate: ^3.0.0
-  font_awesome_flutter: ^10.3.0
+  font_awesome_flutter: ^9.1.0
   google_fonts: ^3.0.1
   from_css_color: ^2.0.0
   json_path: ^0.4.2
