--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,17 +32,17 @@ dependencies:
     sdk: flutter
   flutter_dropzone: ^3.0.5
   file_picker: ^5.2.5
-  amplify_flutter: ^1.0.0-next.3
+  amplify_flutter: ^1.2.0
   amplify_api: ^1.0.0-next.3
   amplify_auth_cognito: ^1.0.0-next.3
   amplify_authenticator: ^1.0.0-next.1
-  chewie: 1.3.6
+  chewie: ^1.0.0
   video_player: ^2.4.10
   logger: ^1.2.2
   http: ^0.13.5
   webview_flutter: ^4.0.1
   simple_markdown_editor: ^0.1.6
-  flutter_form_builder: ^7.7.0
+  flutter_form_builder: ^9.0.0
   flutter_multi_select_items: ^0.4.2
   
 
@@ -54,7 +54,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_animate: ^3.0.0
   font_awesome_flutter: ^9.1.0
-  google_fonts: ^3.0.1
+  google_fonts: ^4.0.3
   from_css_color: ^2.0.0
   json_path: ^0.4.2
   timeago: ^3.3.0
