--- a/terraform/sam.yaml
+++ b/terraform/sam.yaml
@@ -2921,3 +2921,110 @@ Resources:
               - 
                 Key: "contentpubversion"
                 Value: "0.1"
+
+  StripeLambdaPermission:
+        Type: "AWS::Lambda::Permission"
+        Properties:
+            Action: "lambda:InvokeFunction"
+            FunctionName: !GetAtt StripeFunction.Arn
+            Principal: "apigateway.amazonaws.com"
+            SourceArn: !Sub "arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${RestApi.RootResourceId}/*"
+
+  PresignerLambdaPermission:
+      Type: "AWS::Lambda::Permission"
+      Properties:
+          Action: "lambda:InvokeFunction"
+          FunctionName: !GetAtt PresignerFunction.Arn
+          Principal: "apigateway.amazonaws.com"
+          SourceArn: !Sub "arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${RestApi.RootResourceId}/*"
+
+
+  CopyS3ObjectsFunction:
+    Type: AWS::Lambda::Function
+    Properties:
+      Timeout: 900
+      FunctionName: CopyS3ObjectsFunction
+      Handler: index.lambda_handler
+      Role: !GetAtt CopyS3ObjectsFunctionExecutionRole.Arn
+      Code:
+        ZipFile: !Sub |
+          import boto3
+          import cfnresponse
+
+          def lambda_handler(event, context):
+                     
+              try:
+                  copyobjects("contentpub-central-dist", "www.${DomainNameParameter}", "app/")
+                  copyobjects("contentpub-central-dist", "admin.${DomainNameParameter}", "admin/")
+                  
+                  cfnresponse.send(event, context, cfnresponse.SUCCESS, {}, "CustomResourcePhysicalID")
+              except Exception as e:
+                  cfnresponse.send(event, context, cfnresponse.FAILED, {}, "CustomResourcePhysicalID")
+
+
+
+          def copyobjects(source_bucket, destination_bucket, folder):
+            
+              s3 = boto3.client("s3")
+
+              # List objects in the source bucket
+              objects = s3.list_objects_v2(Bucket=source_bucket, Prefix=folder)["Contents"]
+
+              # Copy each object to the destination bucket
+              for obj in objects:
+                  key = obj["Key"]
+                  copy_source = {"Bucket": source_bucket, "Key": key}
+                  print(key)
+                  newkey = key.replace(folder, "")
+                  if len(newkey) > 0:
+                      s3.copy_object(CopySource=copy_source, Bucket=destination_bucket, Key=newkey)
+      Runtime: python3.11
+
+  CopyS3ObjectsFunctionExecutionRole:
+    Type: AWS::IAM::Role
+    Properties:
+      RoleName: LambdaExecutionRole
+      AssumeRolePolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service: lambda.amazonaws.com
+            Action: sts:AssumeRole
+      Policies:
+        - PolicyName: S3AccessPolicy
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - s3:GetObject
+                  - s3:PutObject
+                Resource:
+                  - arn:aws:s3:::contentpub-central-dist/*
+                  - !Sub "arn:aws:s3:::www.${DomainNameParameter}/*"
+                  - !Sub "arn:aws:s3:::admin.${DomainNameParameter}/*"
+              - Effect: Allow
+                Action:
+                  - s3:ListBucket                 
+                Resource:
+                  - arn:aws:s3:::contentpub-central-dist
+                  - !Sub "arn:aws:s3:::www.${DomainNameParameter}"
+                  - !Sub "arn:aws:s3:::admin.${DomainNameParameter}/*"
+  
+  CopyS3ObjectsInvokePermission:
+    Type: AWS::Lambda::Permission
+    Properties:
+      Action: lambda:InvokeFunction
+      FunctionName: !GetAtt CopyS3ObjectsFunction.Arn
+      Principal: s3.amazonaws.com
+      SourceAccount: !Sub "${AWS::AccountId}"
+      SourceArn: arn:aws:s3:::contentpub-central-dist
+
+  RunLambdaAfterDeployment:
+      Type: AWS::CloudFormation::CustomResource
+      Properties:
+        ServiceToken: !GetAtt CopyS3ObjectsFunction.Arn
+
+
+
